Fixed bug displaying on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,6 @@ main {
 .home-links {
     width: 200px;
     height: 200px;
-    background-color: rgba(255, 147, 1, 0.8);
     margin-bottom: 15px;
     padding: 25px;
     text-align: center;
